circuit_breaking/grpc/yaml/asm-all.yaml
# hello2
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  namespace: grpc-circuit-breaking
  name: grpc-hello2-dr
spec:
  host: hello2-svc
  subsets:
    - name: v1
      labels:
        version: v1
  # Traffic policies to apply (load balancing policy, connection pool sizes, outlier detection)
  trafficPolicy:
    # 连接池 controlling the volume of connections to an upstream service
    connectionPool:
      tcp:
        # HTTP1/TCP最大连接数
        maxConnections: 1
        # TCP connection timeout. format: 1h/1m/1s/1ms. MUST BE >=1ms. Default is 10s.
        connectTimeout: 10s
      http:
        http1MaxPendingRequests: 1
        http2MaxRequests: 1
        # 每连接最大请求数
        maxRequestsPerConnection: 1
        maxRetries: 0

    # 离群点检测 controlling eviction of unhealthy hosts from the pool
    outlierDetection:
      # 连续错误数 502/503/504
      consecutiveErrors: 1
      # 检测间隔时间 format: 1h/1m/1s/1ms. MUST BE >=1ms. Default is 10s
      interval: 100ms
      # 逐出时长 format: 1h/1m/1s/1ms. MUST BE >=1ms. Default is 30s.
      baseEjectionTime: 30s
      # 连接池中节点的最大逐出比 Defaults to 10%
      maxEjectionPercent: 100
# https://istio.io/latest/docs/reference/config/networking/destination-rule/
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: grpc-circuit-breaking
  name: hello2-vs
spec:
  hosts:
    - hello2-svc
  http:
    - name: grpc-hello-route
      match:
        - uri:
            prefix: /org.feuyeux.grpc.Greeter/SayHello
      route:
        - destination:
            host: hello2-svc
            subset: v1
